# mPC

./: .gitignore  build.sh  flash.sh  monitor.sh
pico/: CMakeLists.txt  monitor.c
